[package]
name = "float_expansion"
version = "0.1.0"
authors = ["Joshua Ani <josh4820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.12.0"
generic-array = "0.14.4"
higher = "0.1.1"
higher-derive = "0.1.1"
nalgebra = "0.24.0"

[dev-dependencies]
rug = "1.11.0"
rand = "0.8"
rand_pcg = "0.3.0"