[package]
name = "robust-geo"
description = "Implementation of floating-point expansions and geometric tests (https://people.eecs.berkeley.edu/~jrs/papers/robustr.pdf)"
version = "0.1.2"
authors = ["Joshua Ani <josh4820@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/josh65536/robust-geo"
keywords = ["geometry", "robust"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "robust-geo"
bench = false

[dependencies]
typenum = "1.12.0"
generic-array = "0.14.4"
higher = "0.1.1"
higher-derive = "0.1.1"
nalgebra = "0.24.0"
paste = "1.0.4"

[dev-dependencies]
rand = "0.8"
rand_pcg = "0.3.0"
rand_distr = "0.4.0"
criterion = "0.3"
rug = "1.11.0"

[[bench]]
name = "orient_2d"
harness = false

[[bench]]
name = "orient_3d"
harness = false

[[bench]]
name = "in_circle"
harness = false

[[bench]]
name = "in_sphere"
harness = false